# B4

./: CMakeLists.txt  README.md  config.json  rebuild.sh  run-A-config.json  run-B-config.json  transfer_keys.sh
instances/instanceA/: CMakeLists.txt  config.json
instances/instanceA/keys/: my_private.key
instances/instanceB/: config.json
instances/instanceB/keys/: my_private.key  my_public.key  peer_public.key
run-A/: securechat
run-A/keys/run-A/: my_private.der  peer_public.der
run-A/keys/run-B/: my_private.der
run-A/styles/: app.qss
run-B/: start.sh
run-B/keys/run-A/: my_public.der
src/: CryptoHelper.cpp  CryptoHelper.h  KeyGen.cpp  MainWindow.cpp  MainWindow.h  main.cpp
